[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/smooth_follower/smooth_follower.gd" type="Script" id=1]
[ext_resource path="res://addons/ship_controller/ship_controller.gd" type="Script" id=2]

[node name="ShipController" type="RigidBody"]
collision_layer = 5
linear_damp = 1.771
angular_damp = 13.577
script = ExtResource( 2 )

[node name="CockpitCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999994, -0.00359537, 0, 0.00359537, 0.999994, 0, -0.0912746, -0.931277 )
far = 1000.0

[node name="SmoothFollower" type="Spatial" parent="."]
script = ExtResource( 1 )
speed = 3.3
process_mode = 1

[node name="ExternalCamera" type="Camera" parent="SmoothFollower"]
transform = Transform( 1, 0, 0, 0, 0.999994, -0.00359537, 0, 0.00359537, 0.999994, 0, 0, 19.584 )
current = true
far = 1000.0
